--- a/pset01.tex
+++ b/pset01.tex
@@ -68,7 +68,7 @@
 
 
     \titledquestion{Jojo part 7 battle in egypt arc} You're a bizarre adventure with Johnny Joestar to stop the president of the United States. You need to find pieces of the corpse of a saint.
-    The adventure leads you to an island inhabited by knights, who always tell the truth, and knaves, who always lie. 
+    The adventure leads you to an island. 
     Gyro Zeppeli tells you that a piece is in a cave. The cave is guarded by two enemy stand users \emph{Radiohead} and \emph{Nirvana}, who are inhabitants of the island. One always lies and other always tells the truth.
     They will only let you into the cave if you can determine, if possible, what \emph{Radiohead} and \emph{Nirvana} are if they address you in the ways described.
     \emph{Radiohead} says ``The two of us both always tells the truth'' and \emph{Nirvana} says ``\emph{Radiohead} always lie''.
