--- a/pset01.tex
+++ b/pset01.tex
@@ -92,7 +92,9 @@
     
 
     \titledquestion{Is it true?} Determine whether $(\neg p \land (p \implies q)) \implies \neg q$ is a tautology.
-
+    \begin{solution}
+        % Enter solution here
+    \end{solution}
 
 
       
